--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@ant-design/react-slick": "^1.0.2",
     "chart.js": "^4.4.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "firebase": "^10.7.0",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.2",
     "react-chartjs-2": "^5.2.0",
